Refactor entier du programme avec ajout d'annotations, ajouts de loggers, fix des warnings SonarLint